# BridgeAgent

./: .gitignore  README.md
bridgeagent/: .env.example  README.md  pyproject.toml
bridgeagent/scripts/: mantle_smoke_test.py  runtime_mirror_smoke.py
bridgeagent/src/bridgeagent/: __main__.py  app.py  config.py
bridgeagent/src/bridgeagent/core/: candle_cache.py  client.py  hypedexer_client.py  liquidation_aggregator.py  regime.py  risk.py  state.py
bridgeagent/src/bridgeagent/mantle/: __init__.py  _abis.py  client.py  identity.py  trade_journal.py
bridgeagent/src/bridgeagent/onboarding/: __init__.py  wizard.py
bridgeagent/src/bridgeagent/strategies/: __init__.py  ai_wrapper.py  base.py  funding_sniper.py  liquidation_cascade_v2.py  momentum.py  orderbook_imbalance.py  pairs_reversion.py  trend_follower.py  volatility_breakout.py
bridgeagent/src/bridgeagent/tui/: styles.tcss  tuning_advice.py
bridgeagent/src/bridgeagent/tui/screens/: analytics.py  dashboard.py  edit_param_modal.py  reconcile_modal.py  strategy_config.py  trade_journal.py
bridgeagent/src/bridgeagent/tui/widgets/: liquidation_stats.py  market_ticker.py  positions_panel.py
bridgeagent/src/bridgeagent/venue/: __init__.py  base.py  hyperliquid.py
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: IdentityRegistry.sol  TradeJournal.sol
contracts/test/: IdentityRegistry.t.sol  TradeJournal.t.sol
web/: package.json  pnpm-lock.yaml  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: Address.tsx  AgentCard.tsx  CopyButton.tsx  LiveBadge.tsx  TradesTable.tsx  VerifyPanel.tsx  Wordmark.tsx
web/lib/: abis.ts  chain.ts  (+3 more)
(+1 files in other folders)
